2004-04-02	blytkerchan
	* libconf.h [libconf_param_type_t]: add PT_NUMERIC_LIST, PT_STRING_LIST and PT_FILENAME_LIST types
	[libconf_optparam_t]: add val.array_val field
	[libconf_t]: add t_pt field
	* libconf.c (libconf_phase1): handle list types
	(libconf_phase5_helper): change prototype to make void* pointers non-const
	* libconf_optparam.c (libconf_optparam_dup): handle list types
	(libconf_optparam_new): ditto

	* libconf_opt.c: new file
	* libconf_optparam.c: ditto
	* libconf_config.h.in: ditto
	* Makefile.am [libconf_la_SOURCES]: add libconf_opt.c and libconf_optparam.c
	* configure.ac: check the host platform and set POSIX_OR_WOE32 accordingly
	generate libconf_config.h
	* libconf.c: move libconf_optparam-related functions to libconf_optparam.c
	move libconf_opt-related functions to libconf_opt.c
	include libconf_config.h
	(libconf_init): handle default options differently (i.e. get them from the libconf_defaultopts function)
	take default parameters as parameter
	(libconf_phase1): pass name of parameter to libconf_optparam_new()
	(libconf_phase2): implement
	(libconf_phase3): ditto
	(libconf_phase4): ditto
	(libconf_phase5): ditto
	* libconf.h [libconf_optparam_t]: add name field
	[libconf_t]: add defaults field
	(libconf_init): take default configuration parameters as parameter
	(libconf_optparam_new): take name of parameter as parameter
	

2004-04-01	blytkerchan
	* configure.ac: new file
	* Makefile.am: ditto
	* bootstrap: ditto
	* NEWS: ditto
	* Makefile: remove
	* libconf.h [libconf_t::yylineno]: make int

2004-03-31	blytkerchan
	* libconf.c (libconf_optdefaults): comment out
	(libconf_optcat): ditto
	(libconf_init): use a hash for the options in the handle
	(libconf_optparam_new): make it exportable
	[libconf_phase_error_t]: rename from libconf_phase1_error_t
	add ET_UNKNOWN_OPTION
	(libconf_phase1_helper1): new function
	(libconf_phase1): use a hash for the options in the handle
	* libconf.h: make it possible to include this file from C++ source