@@ -1,0 +1,6 @@
+noinst_PROGRAMS=test1
+TESTS=test1
+
+test1_SOURCES=test1.c
+test1_LDADD=../libconf.la
+
