@@ -1,0 +1,3 @@
+define: lines=25:rows=50
+
+
